# cml

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
cmake/: deps.cmake  filter_group.cmake  flags.cmake
cml/: CMakeLists.txt  angle.hpp  angle_kind.hpp  cml.hpp  component_struct.hpp  definitions.hpp  equality.hpp  fixed_point.hpp  matrix.hpp  matrix_components.hpp  matrix_initializer.hpp  matrix_kind.hpp  matrix_operators.hpp  operators.hpp  pi.hpp  quaternion.hpp  reference.hpp  tau.hpp  traits.hpp  vector.hpp  vector_component_table.hpp  vector_operators.hpp
cml/functions/: abs.hpp  clamp.hpp  cos.hpp  cross.hpp  distance.hpp  dot.hpp  exp.hpp  factorial.hpp  length.hpp  lerp.hpp  log.hpp  max.hpp  min.hpp  normalize.hpp  pow.hpp  reflect.hpp  sin.hpp  sqrt.hpp  tan.hpp  transpose.hpp
cml/operator/: add.hpp  add_impl.hpp  divide.hpp  divide_impl.hpp  equals.hpp  equals_impl.hpp  multiply.hpp  multiply_impl.hpp  not_equals.hpp  not_equals_impl.hpp  subtract.hpp  subtract_impl.hpp
samples/test/: CMakeLists.txt  main.cpp
